add delay functionality
